crates/gridwell-writer-latex/tests/snapshots/snapshots__snapshot_rowspan_basic.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: "render(\"minimal/rowspan_basic.json\")"
---
\begin{tabular}{lr}
\toprule
Country & Value \\
\midrule
\multirow{2}{*}{Japan} & 100 \\
110 \\
Korea & 80 \\
\bottomrule
\end{tabular}
