crates/gridwell-writer-latex/tests/snapshots/snapshots__snapshot_styles_borders.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: "render(\"minimal/styles_borders.json\")"
---
\begin{tabular}{lcr}
\toprule
\textbf{A} & \textbf{B} & \textbf{C} \\
\midrule
all borders & all borders & all borders \\
dashed & dashed & dashed \\
none & none & none \\
\bottomrule
\end{tabular}
