crates/gridwell-writer-latex/tests/snapshots/snapshots__striping-basic.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{lll}
\toprule
A & B & C \\
\midrule
1 & 2 & 3 \\
\cellcolor[HTML]{F9F9F9}4 & \cellcolor[HTML]{F9F9F9}5 & \cellcolor[HTML]{F9F9F9}6 \\
7 & 8 & 9 \\
\cellcolor[HTML]{F9F9F9}10 & \cellcolor[HTML]{F9F9F9}11 & \cellcolor[HTML]{F9F9F9}12 \\
\bottomrule
\end{tabular}
