crates/gridwell-writer-latex/tests/snapshots/snapshots__styled-text.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
Term & Note \\
\midrule
Rust & A \textcolor[HTML]{8E44AD}{\textit{systems}} language. \\
\bottomrule
\end{tabular}
