crates/gridwell-writer-latex/tests/snapshots/snapshots__tall-100-rows.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
{\large\bfseries Sequence}\\
\begin{longtable}{lll}
\toprule
n & 2n & n\textasciicircum{}2 \\
\midrule
\endhead
row 0 & 0 & 0 \\
row 1 & 2 & 1 \\
row 2 & 4 & 4 \\
row 3 & 6 & 9 \\
row 4 & 8 & 16 \\
row 5 & 10 & 25 \\
row 6 & 12 & 36 \\
row 7 & 14 & 49 \\
row 8 & 16 & 64 \\
row 9 & 18 & 81 \\
row 10 & 20 & 100 \\
row 11 & 22 & 121 \\
row 12 & 24 & 144 \\
row 13 & 26 & 169 \\
row 14 & 28 & 196 \\
row 15 & 30 & 225 \\
row 16 & 32 & 256 \\
row 17 & 34 & 289 \\
row 18 & 36 & 324 \\
row 19 & 38 & 361 \\
row 20 & 40 & 400 \\
row 21 & 42 & 441 \\
row 22 & 44 & 484 \\
row 23 & 46 & 529 \\
row 24 & 48 & 576 \\
row 25 & 50 & 625 \\
row 26 & 52 & 676 \\
row 27 & 54 & 729 \\
row 28 & 56 & 784 \\
row 29 & 58 & 841 \\
row 30 & 60 & 900 \\
row 31 & 62 & 961 \\
row 32 & 64 & 1024 \\
row 33 & 66 & 1089 \\
row 34 & 68 & 1156 \\
row 35 & 70 & 1225 \\
row 36 & 72 & 1296 \\
row 37 & 74 & 1369 \\
row 38 & 76 & 1444 \\
row 39 & 78 & 1521 \\
row 40 & 80 & 1600 \\
row 41 & 82 & 1681 \\
row 42 & 84 & 1764 \\
row 43 & 86 & 1849 \\
row 44 & 88 & 1936 \\
row 45 & 90 & 2025 \\
row 46 & 92 & 2116 \\
row 47 & 94 & 2209 \\
row 48 & 96 & 2304 \\
row 49 & 98 & 2401 \\
row 50 & 100 & 2500 \\
row 51 & 102 & 2601 \\
row 52 & 104 & 2704 \\
row 53 & 106 & 2809 \\
row 54 & 108 & 2916 \\
row 55 & 110 & 3025 \\
row 56 & 112 & 3136 \\
row 57 & 114 & 3249 \\
row 58 & 116 & 3364 \\
row 59 & 118 & 3481 \\
row 60 & 120 & 3600 \\
row 61 & 122 & 3721 \\
row 62 & 124 & 3844 \\
row 63 & 126 & 3969 \\
row 64 & 128 & 4096 \\
row 65 & 130 & 4225 \\
row 66 & 132 & 4356 \\
row 67 & 134 & 4489 \\
row 68 & 136 & 4624 \\
row 69 & 138 & 4761 \\
row 70 & 140 & 4900 \\
row 71 & 142 & 5041 \\
row 72 & 144 & 5184 \\
row 73 & 146 & 5329 \\
row 74 & 148 & 5476 \\
row 75 & 150 & 5625 \\
row 76 & 152 & 5776 \\
row 77 & 154 & 5929 \\
row 78 & 156 & 6084 \\
row 79 & 158 & 6241 \\
row 80 & 160 & 6400 \\
row 81 & 162 & 6561 \\
row 82 & 164 & 6724 \\
row 83 & 166 & 6889 \\
row 84 & 168 & 7056 \\
row 85 & 170 & 7225 \\
row 86 & 172 & 7396 \\
row 87 & 174 & 7569 \\
row 88 & 176 & 7744 \\
row 89 & 178 & 7921 \\
row 90 & 180 & 8100 \\
row 91 & 182 & 8281 \\
row 92 & 184 & 8464 \\
row 93 & 186 & 8649 \\
row 94 & 188 & 8836 \\
row 95 & 190 & 9025 \\
row 96 & 192 & 9216 \\
row 97 & 194 & 9409 \\
row 98 & 196 & 9604 \\
row 99 & 198 & 9801 \\
\bottomrule
\end{longtable}
